# ros2_bag_manager

./: CMakeLists.txt  package.xml
launch/: extract_topic.launch.xml
src/: extract_topic.cpp
